Fixed gap on the right side of the form caused by the clear div

--- a/css/loginform.css
+++ b/css/loginform.css
@@ -17,6 +17,10 @@
     width: 100%;
 }
 
+.login-form .remembered-login-form .clear {
+    display: none;
+}
+
 .login-form .login-form__message, .login-form .message {
     max-width: 100% !important;
 }
